infra/k8s/overlays/prod/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: vnshop-prod
  labels:
    app.kubernetes.io/part-of: vnshop
    environment: prod
    istio-injection: enabled
