infra/k8s/overlays/prod/ingress-patch.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: vnshop-ingress
  namespace: vnshop
  annotations:
    cert-manager.io/cluster-issuer: "letsencrypt-prod"
